Don't use getLast() on an ArrayList (very dangerous)